<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".InscriptionActivity">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="180dp"
        android:hint="Pseudo">

    </EditText>
    <EditText
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password_inscription">

    </EditText>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:inputType="textPassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm" />
    <Button
        android:id="@+id/btn_inscrire"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/registred_inscription">

    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Already Registered.">

        </TextView>

        <TextView
            android:id="@+id/textview_connexion"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/sign_in">

        </TextView>
    </LinearLayout>

</LinearLayout>