<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:drawableLeft="@drawable/loguser"
        android:hint="@string/email"
        android:inputType="number">

    </EditText>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/pasword"
        android:hint="@string/password"
        android:inputType="textPassword">

    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/remember_me_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:gravity="center_vertical"
            android:text="Remember"
            android:textSize="14sp"
            android:textStyle="bold">

        </CheckBox>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="Forget Password?"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="#009688"
        android:text="@string/connect_connexion">

    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="I'am an conducteur?"
            android:textSize="14sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="140dp"
            android:text="@string/no_registred">

        </TextView>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:text="@string/sign_up"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>